# cv-parser

./: README.md  packages.txt  poetry_run.sh  pyproject.toml  setup.sh
.streamlit/: config.toml
main/: Home.py  Parser-GPT4.py  few_shot_examples.json  few_shot_examples_gpt4.json
main/pages/: Parser-GPT2-Local.py  Parser-GPT4-Recommended.py  Parser-GPT4.py  Parser-Sectional-GPT4.py
