[tool.poetry]
name = "cvparser"
version = "0.1.0"
description = ""
authors = ["Amit <amit.kr.py@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.35.0"
pillow = "^10.3.0"
pdf2image = "^1.17.0"
opencv-python-headless = "^4.9.0.80"
numpy = "^1.26.4"
openai = "^1.52.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
